@@ -1,5 +1,7 @@
 0.24.3	UNRELEASED
 
+ * Add ``dulwich merge-base`` command. (Jelmer Vernooĳ, #1831)
+
  * Add support for ``git var`` command to display Git's logical variables
    (GIT_AUTHOR_IDENT, GIT_COMMITTER_IDENT, GIT_EDITOR, GIT_SEQUENCE_EDITOR,
    GIT_PAGER, GIT_DEFAULT_BRANCH). Available as ``porcelain.var()`` and
